--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-icons": "^4.10.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-loader-spinner": "^5.3.4",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
